antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__chat_composer__tests__agents_navigation_status.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                "
" ┃ Ask Antex to do anything                                                     "
" ┃                                                                              "
" ┃                                                                              "
" ┃                                                                              "
" ┃                                                                              "
" ┃                                                                              "
"                                                                                "
"  model · project · ← for agents                                                "
